test/cli/test-validating-policy/pss-require-run-as-nonroot/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: require-run-as-nonroot
spec:
  validationActions: [Deny]
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: [v1]
      operations: [CREATE, UPDATE]
      resources: [pods]
  variables:
    - name: ctnrs
      expression: >-
        object.spec.containers +
        object.spec.?initContainers.orValue([]) +
        object.spec.?ephemeralContainers.orValue([])
  validations:
    - expression: |-
        object.spec.?hostUsers.orValue(true) == false ||
        (object.spec.?securityContext.?runAsNonRoot.orValue(true) == true &&
        variables.ctnrs.all(c,
          c.?securityContext.?runAsNonRoot.orValue(
            object.spec.?securityContext.?runAsNonRoot.orValue(false)) == true))
      message: >-
        Running as root is not allowed. The field spec.securityContext.runAsNonRoot
        must be unset or set to `true`. The fields
        spec.containers[*].securityContext.runAsNonRoot,
        spec.initContainers[*].securityContext.runAsNonRoot, and
        spec.ephemeralContainers[*].securityContext.runAsNonRoot must be unset or set to
        `true` when the pod-level field is `true`, and must be set to `true` when the
        pod-level field is unset.
        This policy does not apply to Pods that set spec.hostUsers to `false`.
